--- a/src/components/Layout/HeaderCartButton.scss
+++ b/src/components/Layout/HeaderCartButton.scss
@@ -11,7 +11,7 @@ div{
     background-color: $brand_color_thirteen;
     border: 2px solid white;
     border-radius: 2rem;
-    padding: 0.5rem 2rem;
+    padding: 0.25rem 1rem;
     transition: $transition_quarter_second;
     transform: scale(1);
     
