--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
-
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 :root{
